# Youtube-RAG

./: README.md  YoutubeRAG.ipynb  pyproject.toml
frontend/: frontFace.py
src/app/: main.py
