[project]
name = "youtube-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.7",
    "fastapi>=0.135.3",
    "langchain>=1.2.15",
    "openai>=2.31.0",
    "streamlit>=1.56.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.44.0",
    "youtube-transcript-api>=1.2.4",
]
